adding readme file - hw3

--- a/HW3_pya209/Assignment2_pya209.ipynb
+++ b/HW3_pya209/Assignment2_pya209.ipynb
@@ -13,20 +13,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "from __future__ import print_function\n",
     "import os\n",
-    "import pandas as pd\n"
+    "import pandas as pd"
    ]
   },
   {
@@ -930,7 +923,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Figure 2: some explanation"
+    "Figure 2: Traffic volume counts between 12:00-1:00 AM in NY reported by Department of Transport between 2012 and 2013. The data shows steady decline between Nov 2012 and Jan 2013, probaby owing to winter."
    ]
   },
   {
@@ -955,11 +948,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Figure 3: Traffic volume counts between 2:00-3:00PM in NY reported by Department of Transport between 2012 and 2013. The data shows steady decline between Nov 2012 and Jan 2013 probably owing to winter."
+   ]
   }
  ],
  "metadata": {
