--- a/HW9_pya209/Assignment3_pya209.ipynb
+++ b/HW9_pya209/Assignment3_pya209.ipynb
@@ -73,6 +73,286 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import os\n",
+    "import pandas as pd\n",
+    "import zipfile"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "100   201  100   201    0     0   2785      0 --:--:-- --:--:-- --:--:--  2791\n"
+     ]
+    }
+   ],
+   "source": [
+    "!curl http://api.worldbank.org/v2/en/indicator/SP.POP.TOTL?downloadformat=csv?accessType=DOWNLOAD > popbycountry.zip"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "BadZipFile",
+     "evalue": "File is not a zip file",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mBadZipFile\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-16-a6018e62d352>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mzip_ref\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mzipfile\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mZipFile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"popbycountry.zip\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'r'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mzip_ref\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mextractall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetenv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"PUIDATA\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mzip_ref\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/Anaconda3-5.0.0-Linux-x86_64/envs/PUI2016_Python3/lib/python3.5/zipfile.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, file, mode, compression, allowZip64)\u001b[0m\n\u001b[1;32m   1024\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1025\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mmode\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'r'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1026\u001b[0;31m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_RealGetContents\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1027\u001b[0m             \u001b[0;32melif\u001b[0m \u001b[0mmode\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m'w'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'x'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1028\u001b[0m                 \u001b[0;31m# set the modified flag so central directory gets written\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/Anaconda3-5.0.0-Linux-x86_64/envs/PUI2016_Python3/lib/python3.5/zipfile.py\u001b[0m in \u001b[0;36m_RealGetContents\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1091\u001b[0m             \u001b[0;32mraise\u001b[0m \u001b[0mBadZipFile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"File is not a zip file\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1092\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mendrec\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1093\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mBadZipFile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"File is not a zip file\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1094\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdebug\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1095\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mendrec\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mBadZipFile\u001b[0m: File is not a zip file"
+     ]
+    }
+   ],
+   "source": [
+    "zip_ref = zipfile.ZipFile(\"popbycountry.zip\", 'r')\n",
+    "zip_ref.extractall(os.getenv(\"PUIDATA\"))\n",
+    "zip_ref.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!mv popbycountry.csv $PUIDATA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "100  7852  100  7852    0     0  30389      0 --:--:-- --:--:-- --:--:-- 30434\n"
+     ]
+    }
+   ],
+   "source": [
+    "!curl https://serv.cusp.nyu.edu/~fbianco/PUIdata/WorldFirearmsMurdersAndOwnership.csv?accessType=DOWNLOAD > firearms.csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!mv firearms.csv $PUIDATA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1 = pd.read_csv(\"%s/popbycountry.csv\"%os.getenv(\"PUIDATA\"))\n",
+    "df2 = pd.read_csv(\"%s/firearms.csv\"%os.getenv(\"PUIDATA\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>﻿&lt;?xml version=\"1.0\" encoding=\"utf-8\"?&gt;</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>&lt;wb:error xmlns:wb=\"http://www.worldbank.org\"&gt;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>&lt;wb:message id=\"120\" key=\"Invalid value\"&gt;The...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>&lt;/wb:error&gt;</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             ﻿<?xml version=\"1.0\" encoding=\"utf-8\"?>\n",
+       "0     <wb:error xmlns:wb=\"http://www.worldbank.org\">\n",
+       "1    <wb:message id=\"120\" key=\"Invalid value\">The...\n",
+       "2                                        </wb:error>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country/Territory</th>\n",
+       "      <th>ISO code</th>\n",
+       "      <th>Source</th>\n",
+       "      <th>% of homicides by firearm</th>\n",
+       "      <th>Number of homicides by firearm</th>\n",
+       "      <th>Homicide by firearm rate per 100,000 pop</th>\n",
+       "      <th>Rank by rate of ownership</th>\n",
+       "      <th>Average firearms per 100 people</th>\n",
+       "      <th>Average total all civilian firearms</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Albania</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>CTS</td>\n",
+       "      <td>65.9</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>1.76</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>8.6</td>\n",
+       "      <td>270000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>DZ</td>\n",
+       "      <td>CTS</td>\n",
+       "      <td>4.8</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>0.06</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>7.6</td>\n",
+       "      <td>1900000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Angola</td>\n",
+       "      <td>AO</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>17.3</td>\n",
+       "      <td>2800000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Anguilla</td>\n",
+       "      <td>AI</td>\n",
+       "      <td>WHO-MDB</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>7.14</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Argentina</td>\n",
+       "      <td>AR</td>\n",
+       "      <td>Ministry of Justice</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>1198.0</td>\n",
+       "      <td>3.02</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>10.2</td>\n",
+       "      <td>3950000.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Country/Territory ISO code               Source  % of homicides by firearm  \\\n",
+       "0           Albania       AL                  CTS                       65.9   \n",
+       "1           Algeria       DZ                  CTS                        4.8   \n",
+       "2            Angola       AO                  NaN                        NaN   \n",
+       "3          Anguilla       AI              WHO-MDB                       24.0   \n",
+       "4         Argentina       AR  Ministry of Justice                       52.0   \n",
+       "\n",
+       "   Number of homicides by firearm  Homicide by firearm rate per 100,000 pop  \\\n",
+       "0                            56.0                                      1.76   \n",
+       "1                            20.0                                      0.06   \n",
+       "2                             NaN                                       NaN   \n",
+       "3                             1.0                                      7.14   \n",
+       "4                          1198.0                                      3.02   \n",
+       "\n",
+       "   Rank by rate of ownership  Average firearms per 100 people  \\\n",
+       "0                       70.0                              8.6   \n",
+       "1                       78.0                              7.6   \n",
+       "2                       34.0                             17.3   \n",
+       "3                        NaN                              NaN   \n",
+       "4                       62.0                             10.2   \n",
+       "\n",
+       "   Average total all civilian firearms  \n",
+       "0                             270000.0  \n",
+       "1                            1900000.0  \n",
+       "2                            2800000.0  \n",
+       "3                                  NaN  \n",
+       "4                            3950000.0  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
@@ -199,7 +479,7 @@
     }
    ],
    "source": [
-    "df_ = df_.merge(ms, right_on=\"Country\", left_on=\"Country Name\")\n",
+    "df_ = df1.merge(df2, right_on=\"Country\", left_on=\"Country Name\")\n",
     "df_.head()"
    ]
   },
@@ -807,9 +1087,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "PUI2016_Python3",
    "language": "python",
-   "name": "python3"
+   "name": "pui2016_python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -821,7 +1101,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.5.4"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
